2008-10-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_nss.hrl: Add string version of MUC namespaces.

	* src/core/exmpp_compress.erl, src/core/exmpp_tls.erl: Follow
	recommandation of erl_ddll regarding driver loading: drivers are
	loaded only once in a central process. Options are now treated as
	standard proplists; one option of exmpp_tls has a new format.

	* src/core/exmpp_xml.erl: Change default options! Namespace support is
	enabled and names are returned as atom.

	* configure.ac: Define HAVE_EXPAT when the Expat XML port driver is
	built.

	* src/core/exmpp_compress.erl (get_engine_from_options),
	src/core/exmpp_tls.erl (get_engine_from_args): Fix behaviour which was
	broken by previous commit.

	* src/core/exmpp_xml.erl: Like exmpp_tls or exmpp_compress, exmpp_xml
	may use several port drivers, though only Expat is available right
	now. Follow recommandations of erl_ddll regarding driver loading:
	drivers are loaded only once in a central process.

	* testsuite/xml_parser.erl: Update to take into account the default
	options change and the fact that exmpp must be started.

	* src/core/exmpp_sup.erl: Start exmpp_xml.

	* src/core/exmpp_xml.erl, c_src/exmpp_xml_expat.c: Rename commands
	from EXPAT_* to COMMAND_*, now that other port drivers may come in.

	* ebin/exmpp.app.in: Fill the registered processes list.

	* src/core/exmpp_xml.erl: It's now possible to serialize an XML
	document to iolist. The use of iolists seems to bring an improvement
	of 40 to 50% in speed over lists.

	* src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl: Add to_iolist
	functions.

2008-10-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Add functions to serialize JIDs using their
	STRINGPREP'd version.

2008-10-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Rename get_lname_as_atom/1 and
	get_lname_as_list/1 to get_name_as_atom/1 and get_name_as_list/1