@@ -1,3 +1,8 @@
+2008-10-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* c_src/exmpp_xml_expat.c, c_src/Makefile.am, c_src/Makefile.unix:
+	Remove the workaround for an old libei bug with string encoding.
+
 2008-10-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* include/exmpp_nss.hrl: Add string version of MUC namespaces.
